--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/plugin-emitters": "^3.4.0",
+    "@tsparticles/plugin-emitters-shape-circle": "^3.4.0",
+    "@tsparticles/plugin-emitters-shape-square": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "bootstrap": "^5.3.3",
@@ -17,6 +21,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.4.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
