--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.4.0",
     "typewriter-effect": "^2.21.0",
