chore(deps): add date-fns and update react-scripts version

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "maath": "^0.10.8",
     "random": "^5.1.1",
@@ -26,7 +27,7 @@
     "react-github-calendar": "^4.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "cz-conventional-changelog": "^3.3.0"
   }
 }
